--- a/portfolio.css
+++ b/portfolio.css
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: green;
+    background-color: rgb(0, 2, 128);
       color: white;
     text-align: center;
        }
@@ -14,5 +14,8 @@
     border:solid;
     border-color: black;
 
+}
+#info{
+    margin-left: 12px;
 }
      
